--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "teromet/hki-events",
     "type": "project",
     "description": "",
-    "license": "GPL-3.0+",
+    "license": "MIT",
     "require-dev": {
         "phpunit/phpunit": "^10"
     }
